encoding fix for localistaion

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,6 +1,8 @@
-#By Marmite, Iranian Maggot and Zei33
+﻿#By Marmite, Iranian Maggot and Zei33
 l_english:
  australia_focus: "Australia Focus Tree"
+
+ 
 #Decision
  AST_diplo_tug_of_war: "Australian Diplomatic Tug of War"
  AST_diplo_tug_of_war_desc: "§5Australia§! currently exists in a state of sway between the two major superpowers of The §3United States§! and §tChina§!. With both countries trying to exert influence on our country. Through trade and political actions we can influence this to our advantage."
@@ -106,7 +108,7 @@ l_english:
  australia_md.29.o1: "This is a terrible!"
  australia_md.29.o2: "This is great news!"
 
- australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
+australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
  australia_md.50.d: "With pressing security concerns coming from Chinese expansionism in the South East Asia pacific we must review a decision by previous government to lease the port of Landbridge to China for 99 years as a potential security risk or we could appease our trading partner."
  australia_md.50.o1: "Cancel the Lease"
  australia_md.50.o2: "Continue the Lease"
@@ -581,10 +583,6 @@ l_english:
  AST_protecting_aboriginal_land_tready_Secured_desc: ""
 
 
-
-
-
-
  AST_city_infra_focus: "City Infrastructure Focus"
  AST_city_infra_focus_desc: ""
  AST_regional_city_focus: "Regional City Focus"
@@ -627,13 +625,9 @@ l_english:
 
 
 
-
-
-
-
-
-
 #FOCUS - Political (WORK IN PROGRESS)
+ AST_Final_Years_of_Howards_Second_Term: "Turbulent Times"
+ AST_Final_Years_of_Howards_Second_Term_desc: "As Australia approaches the 2001 federal elections, John Howard is an unpopular prime minister, who many want to see resign or be voted out of office. There is also high dissatisfaction with the Liberal/National coalition. A big question on voters minds is if the country's second biggest airline, Ansett Australia, should be bailed out. Labour supports a bailout because it would represent a significant loss of jobs, but the ruling coalition does not since they do not see it as the governments fault."
  AST_Final_Years_of_Howards_Second_Term: "Turbulent Times"
  AST_Final_Years_of_Howards_Second_Term_desc: "As Australia approaches the 2001 federal elections, John Howard is an unpopular prime minister, who many want to see resign or be voted out of office. There is also high dissatisfaction with the Liberal/National coalition. A big question on voters minds is if the country's second biggest airline, Ansett Australia, should be bailed out. Labour supports a bailout because it would represent a significant loss of jobs, but the ruling coalition does not since they do not see it as the governments fault."
  AST_The_Effects_of_GST: "The Effects of GST"
@@ -952,10 +946,6 @@ l_english:
 
 
 
-
-
-
-
  AST_CST_Power_Plants: ""
  AST_CST_Power_Plants_desc: ""
 
@@ -963,8 +953,6 @@ l_english:
  AST_Tidal_generators_desc: ""
  AST_OffshoreWind_Farms: ""
  AST_OffshoreWind_Farms_desc: ""
-
-
 
 
 
@@ -983,12 +971,7 @@ l_english:
  AST_Improved_Australian_Home_of_Shipbuilding: ""
  AST_Improved_Australian_Home_of_Shipbuilding_desc: ""
 
-
-
-
-
-
- AST_Import_Arms_Deals: ""
+AST_Import_Arms_Deals: ""
  AST_Import_Arms_Deals_desc: ""
  AST_australian_foreign_affairs: ""
  AST_australian_foreign_affairs_desc: ""
@@ -1316,7 +1299,6 @@ l_english:
 
 
 
-
 ## ░▒▓██████▓▒░░▒▓███████▓▒░░▒▓████████▓▒░      ░▒▓███████▓▒░ ░▒▓██████▓▒░▒▓████████▓▒░▒▓█▓▒░░▒▓██████▓▒░░▒▓███████▓▒░
 ##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░
 ##░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░
@@ -1466,7 +1448,6 @@ l_english:
  AST_ANZAC_Commitments_mod: "ANZAC Commitments"
  ANZAC_Veteran: "ANZAC Veteran"
  
-
  #regional
  australia_new_zealand_rugby_mod: "Friendly Sports Rivalry"
  AST_Ministry_of_Foreign_Affairs: "Department of Foreign Affairs & Trade (DFAT)"
@@ -1500,7 +1481,6 @@ l_english:
  AST_Production_In_Kaiser_Willhems_Land_desc: "In the spirit of assiting Papua, restoring this state to its former glory we have put forth a an idea to restore the name of Northern Papua to Kaiser-Wilhelmsland, our plan to bring security to the Kaiser-Wilhelmsland region will require capital to create the new arms factories and will require adminstrative offices to maintain."
  AST_Papua_The_lost_Administrative_Region: "Papua The lost Administrative Region"
  AST_Papua_The_lost_Administrative_Region_desc: "The Territory of Papua comprised the southeastern quarter of the island of New Guinea from 1883 to 1975. It was part of Australias state Queensland until 1884, and from 1902-1975 it was an Australian external territory, in an error of judgement by the Labor party for Australia during the term of the 1972 Whitlam government in Australia, saw the Territory became the independent nation of Papua New Guinea. We will attempt to correct these mistakes of the past by offering a dialogue between our nations on the subject."
-
 
 #military
  AST_ADF: "ADF"
