--- a/Changelog.txt
+++ b/Changelog.txt
@@ -64,6 +64,8 @@ v1.10.3
   - Fixed the migration mechanic incorrectly showing a different value on game start
   - Fixed some Spanish decisions not showing up properly if you do not have elections
   - Fixed infiltrated assets invaliding after a save game load
+  - Khamis Gaddafi will no longer be a rival to Mutassim if Mutassim is dead or exiled
+  - Fixed Libya's Increased Tourism applying twice
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
@@ -75,6 +77,7 @@ v1.10.3
   - Hezbollah's Al-Mansar focus now also adds the idea to Palestine/Hamas
   - Adjusted some Kazakh focuses to give ag districts instead of building slots
   - The Ace Pilots can now be female
+  - Reworked Libya's Oil Nationalisation mechanic to make the economy a bit more stable
 
  Database:
   - Improved the Ukrainian OoB for their fielded Aircraft
@@ -88,6 +91,7 @@ v1.10.3
   - Added a better tooltip for a trigger when Libya is not ruled by the Gaddafis
   - Fixed a number of small typoes in the Nigerian focus tree and the events
   - Fixed a option for the event issue showing the wrong localization in the Operation Secure Tomorrow event
+  - Added a trigger tooltip for Indonesia's Invest in our Policies focus
 
  Map:
   - Add Abu Musa Isles
