--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -1020,6 +1020,7 @@
  IND_sal_4: "Modify §YCrushing Radicalization§! by \nDaily Salafist Gain: §G-1%§! \nWar Support: §R-4%§!\nResearch Speed §G+1%§!"
  IND_sal_5: "Replace §YCrushing Radicalization§! with §YCountering Radicalization§! \nWhich grants: \nDaily Salafist Gain: §G-0.5%§! \nWar Support: §R-5%§!"
  IND_helping_aceh: "Will unlock §YHelping Aceh§! Decisions"
+ IND_our_policies_tt: "We must complete either §Y$IND_new_capital$§! or §Y$IND_new_silkroad$§!"
  #Ethnic Tension Tool Tips
  IND_ambon_muslim: "Will unlock §YBacking Muslims§! Decisions"
  IND_ambon_christian: "Will unlock §YBacking Christians§! Decisions"
