--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -7,7 +7,7 @@
  libya_sell_oil_fields: "Sell National Oil Fields"
  libya_sell_oil_fields_desc: "We can sell some of the oil fields run by the National Oil Corporation to foreign companies. We can make a quick buck but it will make our energy sector more reliant on other countries"
  libya_develop_oil_field_cost_bad_tt: "The base cost of developing an oil field in el-Sahara is §Y$3 billion§!. This is increased by [?lba_oil_nationalisation|%0R] because of our §YLevel of Nationalisation§!"
- libya_develop_oil_field_cost_tt: "The base cost of developing an oil field in Waha is §Y$6 billion§!. This is increased by [?lba_oil_nationalisation|%0R] because of our §YLevel of Nationalisation§!"
+ libya_develop_oil_field_cost_tt: "The base cost of developing an oil field in Waha is §Y$8 billion§!. This is increased by [?lba_oil_nationalisation|%0R] because of our §YLevel of Nationalisation§!"
  libya_develop_el_sahara_fields: "Develop the el-Sharara Oil Fields"
  libya_develop_el_sahara_fields_desc: "The el-Sharara oil fields are located in the Wadi al Hayaa district in Southern Libya. It is a minor oil field on the scale of Libya but still an important one. The oil refined here is processed and stored in §YMellitah and az-Zawiyah near Tripoli§!. With increased effort, we can expand the production in el-Sahara.\n\nIn order to expand our existing oil fields, we need to prepare facilities to store the oil and find efficient methods for extracting the oil."
  libya_develop_west_waha_fields: "Develop Western Waha Oil Fields"
@@ -258,7 +258,7 @@
 
  #Ideas
  libya_oil_nationalisation_dynamic_modifier: "Oil Nationalisation"
- TT_libya_oil_nationalisation_dynamic_modifier: "Level of Nationalisation: §Y[?lba_oil_nationalisation|%0]§!"
+ TT_libya_oil_nationalisation_dynamic_modifier: "Level of Nationalisation: §Y[?lba_oil_nationalisation|%0]§!\nAdditional Income: $$[?oil_nationalisation_income|+3] billion per §YOil Extracted§!\n"
  libya_oil_nationalisation_dynamic_modifier_desc: "Much of the oil production in Libya is controlled by the National Oil Corporation. While beneficial for the state, international investments from foreign companies is limited. A higher level of nationalisation will hurt our productivity growth and make it more expensive to develop new oil fields."
  libya_gaddafi_instability_dynamic_modifier: "Family Instability"
  libya_gaddafi_instability_dynamic_modifier_desc: "Gaddafi's eccentricism and his insistence on favouring his children in politics causes more and more resistance from the Libyan population"
@@ -1375,7 +1375,7 @@
  LibyaFocus.31.d: "After exploring the Wadi Ash-Shat' valley, our prospectors have found a decent sized site for a new iron mine This should increase our iron ore production considerably."
  LibyaFocus.31.a: "Not exactly what we wanted, but still good."
  LibyaFocus.32.t: "Motherlode Found"
- LibyaFocus.32.d: "The rumours are true! There is a massive deposit of iron ore under Wadi Ash-Shat' valley! It is not exactly as large as the stories tell, but it is still massive. This is a gread development for Libya!"
+ LibyaFocus.32.d: "The rumours are true! There is a massive deposit of iron ore under Wadi Ash-Shat' valley! It is not exactly as large as the stories tell, but it is still massive. This is a great development for Libya!"
  LibyaFocus.32.a: ":poggies:"
  LibyaFocus.33.t: "Negotiating The Deal"
  LibyaFocus.33.d: "Before we send an offer to [?LBA_target_of_rail_project.GetNameDef], we first need to decide what we will suggest to them. We can offer to split the cost of the project. Alternatively, we could offer to pay the bill completely. It will be more expensive to us, but [?LBA_target_of_rail_project.GetNameDef] is far more likely to agree."
