Australia regional content update

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -108,7 +108,7 @@ l_english:
  australia_md.29.o1: "This is a terrible!"
  australia_md.29.o2: "This is great news!"
 
-australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
+ australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
  australia_md.50.d: "With pressing security concerns coming from Chinese expansionism in the South East Asia pacific we must review a decision by previous government to lease the port of Landbridge to China for 99 years as a potential security risk or we could appease our trading partner."
  australia_md.50.o1: "Cancel the Lease"
  australia_md.50.o2: "Continue the Lease"
@@ -390,6 +390,22 @@ australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
  australia_md.97.o1: "[PAP.GetNameDefCap] has returned South Papua to [AST.GetNameDefCap]."
  australia_md.97.o2: "[PAP.GetNameDefCap] has refused to return South Papua to [AST.GetNameDefCap]."
 
+ australia_md.98.t: "[AST.GetNameDefCap] sues [JAP.GetNameDefCap] at ICJ for Whaling"
+ australia_md.98.d: "[AST.GetNameDefCap] has brought a case against [JAP.GetNameDefCap] at the International Court of Justice (ICJ) for Commercial Whaling, [JAP.GetNameDefCap] maintains it is for scientific purposes, we will present our evidence and let the court decide."
+ australia_md.98.o1: "Present our evidence"
+ australia_md.98.o2: "Withdraw the case."
+
+ australia_md.99.t: "ICJ Finds in favor of [AST.GetNameDefCap]"
+ australia_md.99.d: "The ICJ has decided that Japan's whaling program was actually not for scientific purposes, but was instead a cover for a commercial whaling program.."
+ australia_md.99.o1: "The ICJ has delivered justice"
+ australia_md.99.o2: "We Reject their Ruling."
+
+ australia_md.100.t: "[AST.GetNameDefCap] withdraws the case against [JAP.GetNameDefCap]"
+ australia_md.100.d: "[AST.GetNameDefCap] has withdrawn a case against [JAP.GetNameDefCap] at the International Court of Justice (ICJ) for Commercial Whaling, with [JAP.GetNameDefCap] maintaining it is for scientific purposes, and continuing on the planned whaling expeditions."
+ australia_md.100.o1: "The case is withdrawn."
+ australia_md.100.o2: "[AST.GetNameDefCap] saw reason."
+
+
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
  australia_md.150.a: "Australia may come to regret this"
@@ -435,6 +451,8 @@ australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
  AST_Joint_Forces_Training_Operations_half_idea: "Half-funded Joint Operations Training"
  AST_Joint_Forces_Training_Operations_Full_idea: "Fully-funded Joint Operations Training"
  AST_PNG_Nationalism_idea: "Papuan Nationalism"
+ 
+
 
  AST_the_australian_economy: "The Australian Economy"
  AST_the_australian_economy_desc: ""
@@ -971,7 +989,7 @@ australia_md.50.t: "Cancel the 99-year Landbridge port Lease"
  AST_Improved_Australian_Home_of_Shipbuilding: ""
  AST_Improved_Australian_Home_of_Shipbuilding_desc: ""
 
-AST_Import_Arms_Deals: ""
+ AST_Import_Arms_Deals: ""
  AST_Import_Arms_Deals_desc: ""
  AST_australian_foreign_affairs: ""
  AST_australian_foreign_affairs_desc: ""
@@ -1308,7 +1326,7 @@ AST_Import_Arms_Deals: ""
 ## ░▒▓██████▓▒░░▒▓█▓▒░░▒▓█▓▒░▒▓████████▓▒░      ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓██████▓▒░░▒▓█▓▒░░▒▓█▓▒░
 
 #Political- One Nation
-
+ 
  AST_One_Nation: "One Nation Party"
  AST_One_Nation_desc: "Pauline Hansons One Nation Party represents a balanced right-wing alternative to the current duopoly of Labor and the Coalition. Her message resonated with more than a million Australians who flocked to Federal polls to stand with Pauline for Australian values. One Nation achieved a vote of 9% in the Federal election and 22% in the 1998 Queensland elections. "
  AST_Citizen_Initiated_Referenda: "Citizen Initiated Referenda"
@@ -1388,7 +1406,7 @@ AST_Import_Arms_Deals: ""
  AST_Impose_Manufacturting_Tariffs_On_USA1_dec: "Impose Manufacturing Tariffs on the USA"
  AST_Impose_Manufacturting_Tariffs_On_CHI1_dec: "Impose Manufacturing Tariffs on China"
  AST_End_Royalty_Free_Gas_Exports: "End Royalty Free Gas Exports"
- AST_End_Royalty_Free_Gas_Exports_desc: "Australia currently exports more than 90% of its extracted gas reserves royalty free, This neglectful decision has cost Australia billions in lost revenue"
+ AST_End_Royalty_Free_Gas_Exports_desc: "Australia currently exports more than 90% of its extracted gas reserves royalty free, This neglectful decision has cost Australia billions in lost revenue, imposing the royalties will provide §YGas Royalties additional income§ : §G$0.3bn§"
  AST_End_Royalty_Free_Gas_Exports_idea: "End Royalty Free Gas Exports"
  AST_Triumph_in_our_work: "Triumph in our work"
  AST_Triumph_in_our_work_desc: "Our Industries must expand after the successful implementation of our fiscal policies, we will prioritise developement and specialistasion of faster consturction methods and remove unnecessary red-tape for their approval."
@@ -1481,6 +1499,26 @@ AST_Import_Arms_Deals: ""
  AST_Production_In_Kaiser_Willhems_Land_desc: "In the spirit of assiting Papua, restoring this state to its former glory we have put forth a an idea to restore the name of Northern Papua to Kaiser-Wilhelmsland, our plan to bring security to the Kaiser-Wilhelmsland region will require capital to create the new arms factories and will require adminstrative offices to maintain."
  AST_Papua_The_lost_Administrative_Region: "Papua The lost Administrative Region"
  AST_Papua_The_lost_Administrative_Region_desc: "The Territory of Papua comprised the southeastern quarter of the island of New Guinea from 1883 to 1975. It was part of Australias state Queensland until 1884, and from 1902-1975 it was an Australian external territory, in an error of judgement by the Labor party for Australia during the term of the 1972 Whitlam government in Australia, saw the Territory became the independent nation of Papua New Guinea. We will attempt to correct these mistakes of the past by offering a dialogue between our nations on the subject."
+ AST_Palm_Oil_and_Spices_Agricultural_Industry: "PNG Palm Oil and Spices Agricultural Industry"
+ AST_Palm_Oil_and_Spices_Agricultural_Industry_desc: "The lucrative Palm Oil and Spices Industry in PNG a lack sufficent machinery and an have an unreliable logistical supply chain, if we can invest into the agriculture sector and build own own administrative buildings we can generate extra revenue, §YPNG Palm Oil Investment additional income§ : §G$0.2bn§"
+ AST_Palm_Oil_and_Spices_Agricultural_Industry_idea: "PNG Palm Oil and Spices Agricultural Industry"
+ AST_japanese_language_idea: "Australian interest in learning Japanese"
+ AST_Promote_Japanese_as_a_Second_Language: "Promote Japanese as a Second Language"
+ AST_Promote_Japanese_as_a_Second_Language_desc: "The Promotion of Japanese as a second language and providing japanese lessons in schools has many benefits for our trade and tourism industry as well as strengthening our relations with Japan."
+ japanese_language: "Japanese Language Proficiency"
+ AST_Nara_Treaty_of_Friendship_and_Cooperation: "Nara Treaty of Friendship and Cooperation"
+ AST_Nara_Treaty_of_Friendship_and_Cooperation_desc: "The Nara Treaty was a treaty signed between Australia and Japan on 16 June 1976 by Prime Minister Malcolm Fraser and Prime Minister Takeo Miki, to guide and enhance future bilateral relations in the political, economic, cultural and other fields, [AST.GetLeader] shall announce that our government intends to honour the treaty into the future. §Y Japan and Australias opinion of each other will§ : §GIncrease§ "
+ AST_JAEPA: "Japan–Australia Economic Partnership Agreement"
+ AST_JAEPA_desc: "The JAEPA agreement is an expansion on our exisiting Nara Treaty with [JAP.GetNameDefCap], The Agreement provides valuable preferential access for Australia's exporters and supports growth in two-way investment. JAEPA delivers strong outcomes for Australian businesses. §Y Japan and Australias opinion of each other will§ : §GIncrease§"
+ AST_japan_aus_JEAPA_idea: "JEAPA Agreement"
+ AST_Joint_Security_Pact: "Joint Security Pact"
+ AST_Joint_Security_Pact_desc: "By having a Joint Security Pact with [JAP.GetNameDefCap] we can collaborate on regional security issues such as illegal drug and people smuggling operations as well as sharing information between our police and military. §Y Japan and Australias opinion and protection of each other will§ : §GIncrease§"
+ AST_Nuclear_Submarines_and_Power_Generation: "Nuclear Submarines & Power Generation"
+ AST_Nuclear_Submarines_and_Power_Generation_desc: "We will purchase [JAP.GetAdjective] technologial expertise and knowledge to help [AST.GetNameDefCap] build its new Nuclear industry, this will save us valuable time and money spent in research and development and will cut the time until we will be able to commence enrichment."
+ AST_Whaling_in_our_Antarctic_Sea: "Whaling in our Antartic Sea"
+ AST_Whaling_in_our_Antarctic_Sea_desc: "Australia will sue Japan at the International Court of Justice (ICJ), arguing that Japan's program was actually not for scientific purposes, but was instead a cover for a commercial whaling program."
+ whaling_dispute_mod: "Sued Japan at ICJ for Whaling"
+
 
 #military
  AST_ADF: "ADF"
