Rebalanced a number of places with improved internal factions effects

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,9 @@ v1.10.3
   - Internal faction opinion that is over fifty will now tick down towards 50
   - Added more starting techs for POL in armor category and locked C3ISTAR equipment
   - Removed the stability penalty, added productivity, reduced research penalty from Corruption
+  - Five Year Plan will now give Communist Cadres opinion
+  - Nationalizing assets from the Communists will give Communist Cadres Opinion
+  - Rebalanced some of China's Communist Cadres and Military gain to make it easier to do specific things
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
@@ -66,6 +69,8 @@ v1.10.3
   - Fixed infiltrated assets invaliding after a save game load
   - Khamis Gaddafi will no longer be a rival to Mutassim if Mutassim is dead or exiled
   - Fixed Libya's Increased Tourism applying twice
+  - Fixed the CV 2035 being unable to be unlocked for non-MTG
+  - Fixed the international system renting of specific PMCs self-influencing
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
