Fixed an islamist thing

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -71,6 +71,7 @@ v1.10.3
   - Fixed Libya's Increased Tourism applying twice
   - Fixed the CV 2035 being unable to be unlocked for non-MTG
   - Fixed the international system renting of specific PMCs self-influencing
+  - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
