Australia Regional content - Aceh/Indonesia

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -386,9 +386,22 @@ l_english:
  australia_md.103.d: "[CHI.GetNameDefCap] has responded to our request to join the war against [JAP.GetNameDefCap]."
  australia_md.103.o1: "[CHI.GetNameDefCap] Approved, To Arms!"
  australia_md.103.o2: "[CHI.GetNameDefCap] did not approve our request."
-
-
-
+ australia_md.104.t: "Support Indonesia or Aceh?"
+ australia_md.104.d: "We stand at a political crossroads with relations with out neighbours with the ongoing escalating conflict between [IND.GetNameDefCap] and [ACE.GetNameDefCap], Which side should we support to help resolve the conflict ?"
+ australia_md.104.o1: "We support Indonesia"
+ australia_md.104.o2: "We support Aceh"
+ australia_md.105.t: "[AST.GetNameDefCap] Requests to Join the Conflict"
+ australia_md.105.d: "[AST.GetLeader] Requests to Join the [ACE.GetNameDefCap]-[IND.GetAdjective] Conflict, their request stems from an inability of the local government to resolve the issue quickly and a wish to maintain regional security, should we allow their volunteer forces?"
+ australia_md.105.o1: "Allow their Forces"
+ australia_md.105.o2: "[AST.GetNameDefCap] Assistance is not required."
+ australia_md.106.t: "Approval of our Request to Join the Conflict"
+ australia_md.106.d: "We have received their approval to begin providing volunteer forces to assist in the [IND.GetAdjective]-[ACE.GetNameDefCap] Conflict."
+ australia_md.106.o1: "Our Forces have been Allowed."
+ australia_md.106.o2: "Our Assistance has been refused."
+ australia_md.107.t: "Refusal our of Request to Join the Conflict"
+ australia_md.107.d: "Our request to provide volunteers in the conflict has been denied for now."
+ australia_md.107.o1: "We hope they reach a quick resolution on their own."
+ 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
  australia_md.150.a: "Australia may come to regret this"
@@ -1513,8 +1526,11 @@ l_english:
  not_forgotten1_mod: "[JAP.GetNameDefCap] Invaded us in the past"
  AST_From_Friend_to_Foe: "From Friend to Foe"
  AST_From_Friend_to_Foe_desc: "With the ongoing war between [CHI.GetNameDefCap] and [JAP.GetNameDefCap], we are deciding to request to [CHI.GetNameDefCap] to join their side in the conflict , we will have to wait to see how the [CHI.GetAdjective] repsond to our request."
-
-
+ AST_help_IND: "Send our forces to Help [IND.GetNameDefCap]"
+ AST_help_IND_desc: "Send our forces to Help [IND.GetNameDefCap]"
+ AST_direct_support1: "Direct military support"
+ AST_Solving_the_Aceh_Issue: "Solving the Aceh Issue"
+ AST_Solving_the_Aceh_Issue_desc: "Rebellion in Aceh is a conflict fought by the Free Aceh Movement (GAM) since 1976, with the goal of making the province of Aceh independent from Indonesia. We can take decisive action to end this conflict by offering to send our volunteers to help one side."
 
 #military
  AST_ADF: "ADF"
