European Union Parliament/Council Voting Cooldown

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -109,6 +109,7 @@ v1.10.3
  Used Interface:
   - Fixed the total number of employed persons for Commercialized Agriculture Districts not being present in the tooltip for Millions Worker per Sector
   - Added the potential Renewable Energy Generation to the Power Energy Generation User Interface
+  - Added the European Parliament Voting Cooldown and European Council Voting Cooldown
 
 
 v1.10.2
