--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2572,6 +2572,11 @@
  GER_special_forces_defence_factor_tt: "Modifies §YSpecial Forces Defence§! for §HBundeswehr§! by [?special_forces_defence_factor_change|+%] (Current: [?special_forces_defence_factor|Y%])"
  GER_modifier_army_sub_unit_Special_Forces_speed_factor_tt: "Modifies §YSpecial Forces Speed§! for §HBundeswehr§! by [?modifier_army_sub_unit_Special_Forces_speed_factor_change|+%] (Current: [?modifier_army_sub_unit_Special_Forces_speed_factor|Y%])"
  GER_amphibious_invasion_tt: "Modifies §YAmphibious Invasion§! for §HBundeswehr§! by [?amphibious_invasion_change|+%] (Current: [?amphibious_invasion|Y%])"
+ GER_air_range_factor_tt: "Modifies §YAir Range§! for §HBundeswehr§! by [?air_range_factor_change|+%] (Current: [?air_range_factor|Y%])"
+ GER_air_close_air_support_org_damage_factor_tt: "Modifies §YCAS damage to Organization§! for §HBundeswehr§! by [?air_close_air_support_org_damage_factor_change|+%] (Current: [?air_close_air_support_org_damage_factor|Y%])"
+ GER_air_superiority_bonus_in_combat_tt: "Modifies §YAir Superiority bonus in combat§! for §HBundeswehr§! by [?air_superiority_bonus_in_combat_change|+%] (Current: [?air_superiority_bonus_in_combat|Y%])"
+ GER_air_superiority_efficiency_tt: "Modifies §YAir Superiority Efficiency§! for §HBundeswehr§! by [?air_superiority_efficiency_change|+%] (Current: [?air_superiority_efficiency|Y%])"
+ GER_air_mission_xp_gain_factor_tt: "Modifies §YAir Mission XP§! for §HBundeswehr§! by [?air_mission_xp_gain_factor_change|+%] (Current: [?air_mission_xp_gain_factor|Y%])"
 
 #deutsche bahn
  GER_Deutsch_Bahn_mod: "Deutsche Bahn Modifier"
