Added coptic egypt to those who can take the the clergy

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -86,7 +86,16 @@ v1.10.3
   - Adjusted some Kazakh focuses to give ag districts instead of building slots
   - The Ace Pilots can now be female
   - Reworked Libya's Oil Nationalisation mechanic to make the economy a bit more stable
-  
+  - Coptic Egypt can now take the "The Clergy" internal faction
+
+ Database:
+  - Rebuilt KOR, JAP, CHI, and TAI OOB, stockpiles, and variants. Also UKR OOB fixes
+  - Removed variant version numbering for most majors
+  - Rebalanced Vietnam's building placement so Ho Chi Minh city has buildings
+  - Added Geothermal Energy Production to the following tags: USA, MEX. KEN, ICE
+  - Large-scale replacement of PNG format to optimize operation efficiency
+  - Added accurate Division namelist to Russia+Korea
+
  Graphics:
   - About 60 3D models and texture
   - Complete graphical and 3D upgrade for China, South Korea, Japan, and Taiwan
@@ -95,14 +104,7 @@ v1.10.3
   - Dozens of new equipment GFX to Russia
   - 80+ high quality Aces portraits for Asia and USA
   - Set of new buildings. Eiffel tower, Golden Gate, Basil Cathedral, modern airport, modern naval base
-  
- Database:
-  - Rebuilt KOR, JAP, CHI, and TAI OOB, stockpiles, and variants. Also UKR OOB fixes
-  - Removed variant version numbering for most majors
-  - Rebalanced Vietnam's building placement so Ho Chi Minh city has buildings
-  - Added Geothermal Energy Production to the following tags: USA, MEX. KEN, ICE
-  - Large-scale replacement of PNG format to optimize operation efficiency
-  - Added accurate Division namelist to Russia+Korea
+
 
  Localisation
   - Major fixes and improvements to the Russian localization
@@ -119,7 +121,7 @@ v1.10.3
   - River cross fix
   - Russian Central Federal District revamp (complete)
   - Add Huai River
-  
+
  Music:
   - New radio station with 53 minutes of Asian themed music
 
