fixed military advisors being able to infinitely give you manpower

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -74,6 +74,7 @@ v1.10.3
   - Fixed the international system renting of specific PMCs self-influencing
   - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
   - Fixed Eastern Europe graphical culture wrongly assigned to Asian countries
+  - Fixed being unable to withdraw Military Advisors from the International System screen and granting you infinite manpower
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
