--- a/Changelog.txt
+++ b/Changelog.txt
@@ -75,6 +75,7 @@ v1.10.3
   - Fixed the inability to ban the Moderate Islamists as a non-Muslim nation (gotta ban the Islamists)
   - Fixed Eastern Europe graphical culture wrongly assigned to Asian countries
   - Fixed being unable to withdraw Military Advisors from the International System screen and granting you infinite manpower
+  - Fixed the Armenian Uprising not working if you were Armenia instead of Georgia
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
