--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -862,7 +862,7 @@
  satcom_desc: "With satellite communication systems, our forces will be able to communicate rapidly and securely across the globe, to plan and execute missions with minimal planning time required."
  advanced_comm_encryption: "Advanced Communication Encryption"
  advanced_comm_encryption_desc: "By developing and using advanced Encryption systems, we will further secure out communication systems from enemy interception and decryption."
- long_range_transmitters: "Long Range Communciations"
+ long_range_transmitters: "Long Range Communications"
  long_range_transmitters_desc: "By building smaller and lighter long range communication systems, our forces on the battlefield will be able to communicate and coordinate over vast distances, without issue."
  burst_transmitter_systems: "Burst Transmission Systems"
  burst_transmitter_systems_desc: "Utilizing burst transmission systems, our forces will have better communications security, and be less vulnerable to radio triangulation efforts, making our forces harder to detect."
@@ -886,7 +886,7 @@
  ambush_operations: "Ambush Operations"
  ambush_operations_desc: "Striking from hidden locations and dug in positions will allow us to take the enemy by surprise."
  peaceful_civilian_coersion: "Peaceful Civilian Coercion"
- peaceful_civilian_coersion_desc: "By working with the civilian population, and by gaining their support, we will be better supplied and equipped for our future enagements."
+ peaceful_civilian_coersion_desc: "By working with the civilian population, and by gaining their support, we will be better supplied and equipped for our future engagements."
  violent_civilian_coersion: "Violent Civilian Coercion"
  violent_civilian_coersion_desc: "Beatings, kidnappings, and more; violent actions will quickly garner us the support we need to further fight the invaders."
  hit_and_run_raids: "Hit and Run Raids"
