--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -1092,7 +1092,7 @@
  SOV_mbt_hull_3: "T-14 «Armata» Hull"
  SOV_mbt_hull_3_desc: "The universal combat platform «Armata» is a heavy universal caterpillar platform developed by the Uralvagonzavod Corporation. In addition to the caterpillar platform, the combat vehicles of the Armata family have a common combat management system and common means of communication on IR channels in Radiotischi mode, the general active protection system of Afghanit, common means of detection and destruction of mines, as well as other general nodes and Components."
  SOV_mbt_hull_4: "T-134 «Bear» Hull"
- SOV_mbt_hull_4_desc: "The further development of domestic tank building allowed our designers to create a new tracked for the main combat vehicles. The first machine was the T-134 «Beer». The use of unified components, new chestnuts, the rational use of the internal space, as well as a new component made it possible to significantly reduce the cost of production, increase mobility and security."
+ SOV_mbt_hull_4_desc: "The further development of domestic tank building allowed our designers to create a new tracked for the main combat vehicles. The first machine was the T-134 «Bear». The use of unified components, new chestnuts, the rational use of the internal space, as well as a new component made it possible to significantly reduce the cost of production, increase mobility and security."
 
  ## GERMANY ##
  GER_tank_small_medium_cannon: "105 mm L7A1"
