--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -48,9 +48,9 @@
  H_infantry_weapons7_desc: "Heavy Infantry Weapons are infantry weapons that need an entire crew to move and operate them, such as Heavy Machine Guns, Mortars and Battlefield Robots. These weapons, and the soldiers that operate them, are usually organized in Weapon Squads."
 
  ###MSG WIP###
- diesel_attack_submarine_desc: ""
- Nuclear_carrier_desc: ""
- N_B_Cruiser_desc: ""
+ diesel_attack_submarine_desc: "Common conventionally powered attack submarines are submarines designed to attack and sink other submarines, surface ships, and merchant ships. They are also used to protect friendly surface ships and ballistic missile submarines."
+ Nuclear_carrier_desc: "An aircraft carrier powered by a nuclear reactor. It is a large surface ship with carrier-based aircraft as its main combat weapon. Relying on nuclear-powered aircraft carriers, a country can exert military pressure and conduct operations on other countries far away from its territory without relying on local airports."
+ N_B_Cruiser_desc: "Equipped with nuclear-powered battlecruisers, their range and supply range have been greatly improved, and their survivability and attack capabilities in wartime have been greatly improved."
  ###MSG WIP###
 
  night_vision_1_desc: "First-generation passive devices, introduced during the Vietnam War, were an adaptation of earlier active GEN 0 technology, and rely on ambient light instead of an infrared light source. Using an S-20 photocathode, their image intensifiers produce a light amplification of around 1,000x, but are quite bulky and require moonlight to function properly."
