--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -1070,7 +1070,7 @@
  geo_misc.9.d1: "Samtskhe-Djavakheti is rightfully ours!"
 
  geo_misc.10.t: "Increasing Autonomy in Djavakheti."
- geo_misc.10.d: "Now, the time has come to finally sign the resolution. Djavakheti will get a status of religious, cultural and linguistical autonomy. Do we "
+ geo_misc.10.d: "Now, the time has come to finally sign the resolution. Djavakheti will get a status of religious, cultural and linguistical autonomy. Are we going to take the next step?"
  geo_misc.10.a: "We agree to these terms."
  geo_misc.10.b: "We are ready to give special status."
 
