Australia regional content update
fix indonesia focus to give money to australia

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -401,7 +401,15 @@ l_english:
  australia_md.107.t: "Refusal our of Request to Join the Conflict"
  australia_md.107.d: "Our request to provide volunteers in the conflict has been denied for now."
  australia_md.107.o1: "We hope they reach a quick resolution on their own."
- 
+ australia_md.108.t: "[IND.GetAdjective]-[AST.GetAdjective] Timor Summit"
+ australia_md.108.d: "Australia has objected to the deaths of its citizens working as aid workers in East Timor when the [IND.GetAdjective] military opened fire on the [TIM.GetAdjective] civilians, this summit is designed to help deal with the current impasse and allow Indonesia to respond."
+ australia_md.108.o1: "We have presented our position"
+ australia_md.108.o2: "We Should §G$IND_apologize_australia$§  §Hor § §R$IND_confront_australia$§  §Hvia§ §H Focus Tree §"
+ australia_md.109.t: "Volunteers in an Unresolved Conflict"
+ australia_md.109.d: "Our volunteer forces have been engaged for a year in the current conflict should we keep the fight going as it currently is or escalate to a war?"
+ australia_md.109.o1: "Escalate the conflict to a war"
+ australia_md.109.o2: "Keep our volunteer forces"
+
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
  australia_md.150.a: "Australia may come to regret this"
@@ -440,6 +448,8 @@ l_english:
  AST_major_bushfire_damage_effect_tt: "§YMajor Bushfires§! have caused §Rsignificant damage§! to our country and some of our §Rcitizens have died§!."
  AST_minor_bushfire_damage_effect_tt: "§YBushfires§! have caused §Ysome damage§! to our country."
 
+ AST_test9: "TEST 9"
+ AST_test9_desc: "We Should §G$IND_apologize_australia$§  §Hor § §G$IND_confront_australia$§  §Hvia§ §H Focus Tree §"
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
 
@@ -447,9 +457,6 @@ l_english:
  AST_Joint_Forces_Training_Operations_half_idea: "Half-funded Joint Operations Training"
  AST_Joint_Forces_Training_Operations_Full_idea: "Fully-funded Joint Operations Training"
  AST_PNG_Nationalism_idea: "Papuan Nationalism"
- 
-
-
  AST_the_australian_economy: "The Australian Economy"
  AST_the_australian_economy_desc: ""
  AST_idea_millennium_drought: "The Millennium Drought"
@@ -1531,7 +1538,8 @@ l_english:
  AST_direct_support1: "Direct military support"
  AST_Solving_the_Aceh_Issue: "Solving the Aceh Issue"
  AST_Solving_the_Aceh_Issue_desc: "Rebellion in Aceh is a conflict fought by the Free Aceh Movement (GAM) since 1976, with the goal of making the province of Aceh independent from Indonesia. We can take decisive action to end this conflict by offering to send our volunteers to help one side."
-
+ AST_Indonesian_Australian_Timor_Summit: "Indonesian-Australian Timor Summit"
+ AST_Indonesian_Australian_Timor_Summit_desc: "[AST.GetNameDefCap] and [IND.GetNameDefCap] have agreed to meet for a diplomatic summit after the violent escalation in East Timor that resulted in the deaths of [AST.GetAdjective] aid workers and civilians during the Timor Independence movement that was met with miliatary force by [IND.GetNameDefCap]."
 #military
  AST_ADF: "ADF"
  AST_ADF_desc: ""
