--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2577,6 +2577,27 @@
  GER_air_superiority_bonus_in_combat_tt: "Modifies §YAir Superiority bonus in combat§! for §HBundeswehr§! by [?air_superiority_bonus_in_combat_change|+%] (Current: [?air_superiority_bonus_in_combat|Y%])"
  GER_air_superiority_efficiency_tt: "Modifies §YAir Superiority Efficiency§! for §HBundeswehr§! by [?air_superiority_efficiency_change|+%] (Current: [?air_superiority_efficiency|Y%])"
  GER_air_mission_xp_gain_factor_tt: "Modifies §YAir Mission XP§! for §HBundeswehr§! by [?air_mission_xp_gain_factor_change|+%] (Current: [?air_mission_xp_gain_factor|Y%])"
+ GER_naval_mine_hit_chance_tt: "Modifies §YMine hit chance§! for §HBundeswehr§! by [?naval_mine_hit_chance_change|+%] (Current: [?naval_mine_hit_chance|Y%])"
+ GER_naval_mines_damage_factor_tt: "Modifies §YMine damage§! for §HBundeswehr§! by [?naval_mines_damage_factor_change|+%] (Current: [?naval_mines_damage_factor|Y%])"
+ GER_naval_mines_effect_reduction_tt: "Modifies §YMine effect reduction§! for §HBundeswehr§! by [?naval_mines_effect_reduction_change|+%] (Current: [?naval_mines_effect_reduction|Y%])"
+ GER_naval_morale_factor_tt: "Modifies §YNavy Moral§! for §HBundeswehr§! by [?naval_morale_factor_change|+%] (Current: [?naval_morale_factor|Y%])"
+ GER_naval_retreat_chance_tt: "Modifies §Yretreat chance§! for §HBundeswehr§! by [?naval_retreat_chance_change|+%] (Current: [?naval_retreat_chance|Y%])"
+ GER_navy_capital_ship_attack_factor_tt: "Modifies §Ycapital ship attack§! for §HBundeswehr§! by [?navy_capital_ship_attack_factor_change|+%] (Current: [?navy_capital_ship_attack_factor|Y%])"
+ GER_naval_invasion_prep_speed_tt: "Modifies §Yinvasion preperation speed§! for §HBundeswehr§! by [?naval_invasion_prep_speed_change|+%] (Current: [?naval_invasion_prep_speed|Y%])"
+ GER_naval_invasion_planning_bonus_speed_tt: "Modifies §invasion planning speed§! for §HBundeswehr§! by [?naval_invasion_planning_bonus_speed_change|+%] (Current: [?naval_invasion_planning_bonus_speed|Y%])"
+ GER_critical_receive_chance_tt: "Modifies §Ycritical recive chance§! for §HBundeswehr§! by [?critical_receive_chance_change|+%] (Current: [?critical_receive_chance|Y%])"
+ GER_naval_critical_score_chance_factor_tt: "Modifies §Ycritical score chance§! for §HBundeswehr§! by [?naval_critical_score_chance_factor_change|+%] (Current: [?naval_critical_score_chance_factor|Y%])"
+ GER_naval_hit_chance_tt: "Modifies §Ynavy hit chance§! for §HBundeswehr§! by [?naval_hit_chance_change|+%] (Current: [?naval_hit_chance|Y%])"
+ GER_naval_enemy_fleet_size_ratio_penalty_factor_tt: "Modifies §Yenemy fleet size penelty§! for §HBundeswehr§! by [?naval_enemy_fleet_size_ratio_penalty_factor_change|+%] (Current: [?naval_enemy_fleet_size_ratio_penalty_factor|Y%])"
+ GER_naval_retreat_speed_after_initial_combat_tt: "Modifies §Yretreat speed after initail attack§! for §HBundeswehr§! by [?naval_retreat_speed_after_initial_combat_change|+%] (Current: [?naval_retreat_speed_after_initial_combat|Y%])"
+ GER_naval_retreat_chance_after_initial_combat_tt: "Modifies §Yretreat after initial attack§! for §HBundeswehr§! by [?naval_retreat_chance_after_initial_combat_change|+%] (Current: [?naval_retreat_chance_after_initial_combat|Y%])"
+ GER_naval_torpedo_cooldown_factor_tt: "Modifies §Ytorpedo cool down§! for §HBundeswehr§! by [?naval_torpedo_cooldown_factor_change|+%] (Current: [?naval_torpedo_cooldown_factor|Y%])"
+ GER_naval_torpedo_hit_chance_factor_tt: "Modifies §Ytorpedo hit chance§! for §HBundeswehr§! by [?naval_torpedo_hit_chance_factor_change|+%] (Current: [?naval_torpedo_hit_chance_factor|Y%])"
+ GER_screening_without_screens_tt: "Modifies §Ypassive screening§! for §HBundeswehr§! by [?screening_without_screens_change|+%] (Current: [?screening_without_screens|Y%])"
+ GER_ships_at_battle_start_tt: "Modifies §Yships at battle start§! for §HBundeswehr§! by [?ships_at_battle_start_change|+%] (Current: [?ships_at_battle_start|Y%])"
+ GER_navy_screen_attack_factor_tt: "Modifies §Yscreening attack§! for §HBundeswehr§! by [?navy_screen_attack_factor_change|+%] (Current: [?navy_screen_attack_factor|Y%])"
+ GER_navy_screen_defence_factor_tt: "Modifies §Yscreening defence§! for §HBundeswehr§! by [?navy_screen_defence_factor_change|+%] (Current: [?navy_screen_defence_factor|Y%])"
+
 
 #deutsche bahn
  GER_Deutsch_Bahn_mod: "Deutsche Bahn Modifier"
